example/lib/src/generated/errors/errors_localization_hu.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Hungarian (`hu`).
class ErrorsLocalizationHu extends ErrorsLocalization {
  ErrorsLocalizationHu([String locale = 'hu']) : super(locale);

  @override
  String get error => 'Hiba történt';

  @override
  String get unexpectedError => 'Váratlan hiba történt';

  @override
  String get bugReportSentText => 'A hibajelentés sikeresen elküldve.';
}
